@@ -2,6 +2,7 @@ Process Hacker
 
 2.23
  * NEW/IMPROVED:
+   * Added Description column to service list
    * Enabled multi-selection in the hidden processes window
  * FIXED:
 
